[package]
name = "ntfy-run"
version = "0.1.2"
edition = "2021"
authors = ["Quantum <me@quantum5.ca>"]
description = "ntfy-run is a tool to run a command, capture its output, and send it to a ntfy server."
readme = "README.md"
homepage = "https://github.com/quantum5/ntfy-run"
repository = "https://github.com/quantum5/ntfy-run"
license = "GPL-3.0-or-later"
keywords = ["ntfy", "cron", "notifications", "utility"]
categories = ["command-line-interface"]

exclude = [
    ".github/*"
]

[dependencies]
clap = { version = "4.5.20", features = ["derive", "env"] }
itertools = "0.13.0"
reqwest = "0.12.8"
tokio = { version = "1.40.0", features = ["io-std", "io-util", "macros", "process", "rt-multi-thread"] }

[profile.release]
lto = true
strip = true
panic = "abort"
